@@ -32,6 +32,8 @@ version 0.8.9 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: Allow indInfo, setInfo etc to access virtual subpopulation.
   - CHG: Merge parameter virtualSubPop with subPop in mating schemes.
   - NEW: Add simuProgress class to simuUtl.
+  - CHG: Remove simulator::applyOpToStoppedReps and simulator::stopIfOneRepStops
+  - NEW: Add StopEvolution exception and add simulator::stopIfOneRepStops to terminators.
 
 
 version 0.8.8 - (Rev 1787) Oct 24, 2008
